welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	var c=0;
	if (a<=20 && a>=10) {
		if (b<=20 && b>=10) {
			return Math.max(a, b);
		}
		else return a;
	}
	else if ((b<=20) && (b>=10)) {
		return b;
	}
}
